# CsvToFHIR

./: .flake8  .gitignore  CODEOWNERS  README.md  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  continuous-integration.yml  publish-release.yml
demo/config/: data-contract.json
demo/input/: patient.csv
docs/: contributing.md  datacontract copy.md  datacontract.md  ide.md  implementation-guide.md  internal-format.md
notebooks/: HelloWorld.ipynb
src/linuxforhealth/csvtofhir/: __init__.py  config.py  converter.py  support.py
tests/: conftest.py  support.py  test_cli.py  test_config.py  test_converter.py  test_support.py
tests/fhirrs/: test_allergy_intolerance.py  test_condition.py  test_encounter.py  test_encounter_drgcode_extension.py  test_encounter_insured_extension.py  test_encounter_location.py  test_encounter_participant.py  test_encounter_patient_identifier.py  test_encounter_provider.py  test_immunization.py  test_medication_use.py  test_meta.py  test_observation.py  test_patient.py  test_procedure.py  test_unstructured.py
tests/fhirutils/: test_fhir_utils.py
tests/model/: test_contract.py  test_patient_csv.py  test_practitioner_csv.py  test_procedure_csv.py  test_unstructured_csv.py
tests/pipeline/: test_operations.py  test_tasks.py
tests/resources/csv/: 2022-02-18-patient-headerless.csv  2022-02-18-patient.csv  Patient-headerless.csv  Patient.csv  patient-lastnames.csv
tests/resources/data-contract/: data-contract-comments.json  data-contract-delimiter.json  data-contract-fixed-width-external-config.json  sex.csv  (+14 more)
(+48 files in other folders)
