[metadata]
name = linuxforhealth-csvtofhir
version = attr: linuxforhealth.csvtofhir.__version__
url = https://github.com/LinuxForHealth/CsvToFHIR
description = Maps and converts delimited data to FHIR resources.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0 License
platform = any
keywords = linuxforhealth, fhir, csv, healthit, edi, hl7
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers
    Intended Audience :: Information Technology

[options]
install_requires =
    deepdiff >=5.8, <6.0
    fhir.resources >=6.4, <7.0
    pandas >=1.4 ,<2.0
    pydantic >=1.9, <2.0
    python-dotenv >=0.20, <1.0
    python-dateutil >=2.8, <3.0
    pytz ==2022.1
package_dir =
    = src
python_requires = >=3.9
packages = find_namespace:
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    csvtofhir = linuxforhealth.csvtofhir.cli.main:main

[options.extras_require]
dev = pytest >=7.1, <8.0;flake8 >=4.0, <5.0;autopep8 >=1.6, <2.0;isort >= 5.10, <6.0


[flake8]
max-line-length=120	
recursive = true	
aggressive = 3	
